# WanMark_bot

./: .env.dev  .env.simple  .gitignore  README.md  docker-compose.yml  pyproject.toml  wanmark_bot.Dockerfile  wanmark_celery.Dockerfile  wanmark_web.Dockerfile
bot/: filters.py  keyboards.py  main_bot.py  middleware.py  models.py
bot/management/commands/: run_bot.py
bot/services/: db_botuser_dao.py  send_message.py
config/: asgi.py  settings.py  urls.py  wsgi.py
static/css/: sign-in.css
templates/admin/: base_site.html  login.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/templates/users/: login.html  tg_password_reset_form.html
users/templatetags/: users_tags.py
wanmark/: admin.py  apps.py  forms.py  models.py  tasks.py
